--- a/getToken.html
+++ b/getToken.html
@@ -13,7 +13,7 @@
     <div id="app">
         <el-main>
             <div class="level">
-                <h3>获取Token1 <el-link type="primary" href="./index.html">Tvbox线路</el-link>
+                <h3>获取Token <el-link type="primary" href="./index.html">Tvbox线路</el-link>
                 </h3>
                 <el-table :data="urls" style="width: 100%" size="small">
                     <el-table-column prop="name" label="名称" width="120"></el-table-column>
