--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <el-main>
             <div class="level">
 
-                <h3>多仓地址1 <el-link type="primary" href="./getToken.html">获取Token</el-link>
+                <h3>多仓地址 <el-link type="primary" href="./getToken.html">获取Token</el-link>
                 </h3>
                 <el-table :data="storeHouse" style="width:100%" size="small">
                     <el-table-column prop="name" label="名称" width="120"></el-table-column>
